--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"build": "napi build --platform --release",
 		"build:debug": "napi build --platform",
 		"prepublishOnly": "napi prepublish -t npm",
-		"version": "napi version"
+		"version": "napi version",
+		"test": "node ./test/"
 	}
 }
