--- a/npm/win32-x64-msvc/package.json
+++ b/npm/win32-x64-msvc/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "@pyrotechniac/star-utils-win32-x64-msvc",
-  "os": [
-    "win32"
-  ],
-  "cpu": [
-    "x64"
-  ],
-  "main": "star-utils.win32-x64-msvc.node",
-  "files": [
-    "star-utils.win32-x64-msvc.node"
-  ],
-  "engines": {
-    "node": ">= 10"
-  }
+	"name": "@pyrotechniac/star-utils-win32-x64-msvc",
+	"os": [
+		"win32"
+	],
+	"cpu": [
+		"x64"
+	],
+	"main": "star-utils.win32-x64-msvc.node",
+	"files": [
+		"star-utils.win32-x64-msvc.node"
+	],
+	"engines": {
+		"node": ">= 10"
+	},
+	"version": "0.1.0"
 }
